update product api

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,10 @@
             <scope>runtime</scope>
             <version>8.0.29</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
