--- a/src/main/webapp/client/package.json
+++ b/src/main/webapp/client/package.json
@@ -8,12 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "cloudinary-react": "^1.7.2",
+    "image-upload-react": "^1.4.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetpagination": "^1.0.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
